[gd_scene load_steps=42 format=3 uid="uid://cs0kay877rrbv"]

[ext_resource type="Texture2D" uid="uid://dpwne58plfjq0" path="res://Sunny-land-files/Graphical Assets/spritesheets/enemy-deadth.png" id="1_rq300"]
[ext_resource type="Script" path="res://frog.gd" id="1_tbwk3"]
[ext_resource type="Texture2D" uid="uid://cuupsuvehbey7" path="res://Sunny-land-files/Graphical Assets/spritesheets/frog-idle.png" id="2_172nw"]
[ext_resource type="Texture2D" uid="uid://d3nmayu6axbrh" path="res://Sunny-land-files/Graphical Assets/spritesheets/frog-jump.png" id="3_r8l5i"]
[ext_resource type="AudioStream" uid="uid://gagnlvnycj3p" path="res://Sunny-land-files/Custom/frog_hurt.wav" id="5_u3llr"]
[ext_resource type="AudioStream" uid="uid://ccvsdaeu884j5" path="res://Sunny-land-files/10_Battle_SFX/08_Bite_04.wav" id="6_nbeqg"]
[ext_resource type="Script" path="res://CharacterStates/CharacterStateMachine.gd" id="7_ypbje"]
[ext_resource type="Script" path="res://CharacterStates/DeathState.gd" id="8_aikl1"]
[ext_resource type="Script" path="res://CharacterStates/MobMoveState.gd" id="9_03bk7"]
[ext_resource type="Script" path="res://CharacterStates/MobAttackState.gd" id="10_jrs1a"]
[ext_resource type="Script" path="res://CharacterStates/MobSpawnState.gd" id="10_x62h4"]
[ext_resource type="Script" path="res://UI/StateDebugLabel.gd" id="11_nqbje"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kj2hp"]

[sub_resource type="Animation" id="Animation_beojv"]
resource_name = "Idle"
length = 0.4
loop_mode = 2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FrogSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_172nw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FrogSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FrogSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_s14lf"]
resource_name = "Jump"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FrogSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_r8l5i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FrogSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FrogSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_wuxpt"]
resource_name = "Fall"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FrogSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_r8l5i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FrogSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FrogSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_a37ro"]
resource_name = "Run"
length = 0.55
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FrogSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_r8l5i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FrogSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FrogSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_fscf5"]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FrogSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_rq300")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FrogSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FrogSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_j6fbt"]
resource_name = "Spawn"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FrogSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_172nw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FrogSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FrogSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FrogSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.211765), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yfh8c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FrogSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_biimr"]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FrogSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_r8l5i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FrogSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FrogSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3dja4"]
_data = {
"Attack": SubResource("Animation_biimr"),
"Death": SubResource("Animation_fscf5"),
"Fall": SubResource("Animation_wuxpt"),
"Idle": SubResource("Animation_beojv"),
"Jump": SubResource("Animation_s14lf"),
"RESET": SubResource("Animation_yfh8c"),
"Run": SubResource("Animation_a37ro"),
"Spawn": SubResource("Animation_j6fbt")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7jd7h"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wiixc"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8cygo"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6homv"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hpdvp"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ykvi8"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ttet7"]
animation = &"Fall"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_yr37h"]
blend_point_0/node = SubResource("AnimationNodeAnimation_8cygo")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_6homv")
blend_point_1/pos = Vector2(1.1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_hpdvp")
blend_point_2/pos = Vector2(-1.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ykvi8")
blend_point_3/pos = Vector2(0, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_ttet7")
blend_point_4/pos = Vector2(0, -1)
min_space = Vector2(-1.1, -1)
max_space = Vector2(1.1, 1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ew6qo"]
animation = &"Spawn"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ddofg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a85wf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_77r3f"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fg3fu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b0fcc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_53we1"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_xx1i0"]
states/Attack/node = SubResource("AnimationNodeAnimation_7jd7h")
states/Attack/position = Vector2(558, 151)
states/Death/node = SubResource("AnimationNodeAnimation_wiixc")
states/Death/position = Vector2(735, 100)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_yr37h")
states/Move/position = Vector2(558, 61)
states/Spawn/node = SubResource("AnimationNodeAnimation_ew6qo")
states/Spawn/position = Vector2(369, 100)
states/Start/position = Vector2(202, 100)
transitions = ["Start", "Spawn", SubResource("AnimationNodeStateMachineTransition_ddofg"), "Death", "End", SubResource("AnimationNodeStateMachineTransition_a85wf"), "Spawn", "Move", SubResource("AnimationNodeStateMachineTransition_77r3f"), "Move", "Death", SubResource("AnimationNodeStateMachineTransition_fg3fu"), "Move", "Attack", SubResource("AnimationNodeStateMachineTransition_b0fcc"), "Attack", "Move", SubResource("AnimationNodeStateMachineTransition_53we1")]

[sub_resource type="CircleShape2D" id="CircleShape2D_pfwwa"]
radius = 104.043

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oy4sx"]
size = Vector2(30, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11pcb"]
size = Vector2(24, 25)

[node name="Frog" type="CharacterBody2D" node_paths=PackedStringArray("animation_tree", "sprite_2d", "character_state_machine")]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_tbwk3")
animation_tree = NodePath("FrogAnimationTree")
sprite_2d = NodePath("FrogSprite")
character_state_machine = NodePath("CharacterStateMachine")
health = 1
drop_amount = 2
drop_range = 1
attack_damage = 1

[node name="FrogCollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_kj2hp")

[node name="FrogSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.211765)
texture = ExtResource("2_172nw")
hframes = 4

[node name="FrogAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3dja4")
}

[node name="FrogAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_xx1i0")
anim_player = NodePath("../FrogAnimationPlayer")
parameters/Move/blend_position = Vector2(0, 0)

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="PlayerDetection" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_pfwwa")

[node name="PlayerCollision" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="PlayerCollision" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_oy4sx")

[node name="FrogHurtbox" type="Area2D" parent="."]
visible = false

[node name="Hurtbox" type="CollisionShape2D" parent="FrogHurtbox"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_11pcb")

[node name="frog_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_u3llr")

[node name="frog_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_nbeqg")

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "character", "animation_tree", "death_state")]
script = ExtResource("7_ypbje")
current_state = NodePath("Spawn")
character = NodePath("..")
animation_tree = NodePath("../FrogAnimationTree")
death_state = NodePath("Death")

[node name="Death" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("death_sound")]
script = ExtResource("8_aikl1")
death_animation = "Death"
death_sound = NodePath("../../frog_death")
can_move = false

[node name="Move" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("attack_state")]
script = ExtResource("9_03bk7")
attack_state = NodePath("../Attack")
move_animation = "Move"

[node name="Attack" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("move_state", "attack_sound")]
script = ExtResource("10_jrs1a")
move_state = NodePath("../Move")
attack_sound = NodePath("../../frog_attack")
can_move = false

[node name="Spawn" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("move_state", "spawn_sound")]
script = ExtResource("10_x62h4")
move_state = NodePath("../Move")
spawn_animation = "Spawn"
spawn_sound = NodePath("../../frog_death")
can_move = false

[node name="StateDebugLabel" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -41.0
offset_top = -27.0
offset_right = 41.0
offset_bottom = -7.0
theme_override_font_sizes/font_size = 10
text = "text"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("11_nqbje")
state_machine = NodePath("../CharacterStateMachine")

[connection signal="animation_finished" from="FrogAnimationTree" to="." method="_on_frog_animation_tree_animation_finished"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
[connection signal="body_exited" from="PlayerCollision" to="." method="_on_player_collision_body_exited"]
